# TCG

./: .gitignore  README.md
model/: TCGModelValidator.py  TCGModelValidator_simulation.py
model/TCG/: IntervalAlgebra.py  NGram.py  TemporalContextGraph.py
model/TCG/input/: 1.txt  2.txt
model/data_prep/: audio_to_text.py  configuration.py  extract_png_from_rosbag.py  generate_validation_set.py  move_audio_files.py  reformat_temp_files.py  rename_bag_files.py  temporal_info_from_rosbag.py
model/perception/: cnn_common_methods.py  cnn_parameters_explorer.py  constants.py  generate_tfrecords_from_rosbags.py  input_pipeline.py  noise_subtraction.py  packager.py  rosbag_to_png_output.py  tfrecord_rw.py  timing_values_explorer.py
model/perception/aud_classifier/: aud_classifier.py  aud_trainer.py  aud_validator.py
model/perception/vid_classifier/: vid_classifier.py  vid_trainer.py  vid_validator.py
model/sg_perception/: TCGModelValidator.py  TCGModelValidator_simulation.py  cnn_common_methods.py  constants.py  fix_timing_errors.py  input_pipeline.py  noise_event_remover.py  packager.py  rosbag_to_png_output.py  tfrecord_rw.py  validation_file_generator.py
model/sg_perception/aud_classifier/: aud_classifier.py
model/sg_perception/opt_classifier/: opt_classifier.py
nao_interface/: disableexpressivelistening.py  ond_action_selector.py  ond_action_selector_nao.py  sg_action_selector.py
sawyer_interface/: sawyer_action_selector.py
sawyer_interface/data_preprocessing/: rosbag_reader.py
sawyer_interface/qa_interface/: qa_interface.html
sawyer_interface/sawyer_woz/: CMakeLists.txt  package.xml
sawyer_interface/sawyer_woz/launch/: sawyer_woz.launch
sawyer_interface/sawyer_woz/src/: main.cpp  sawyer_woz.cpp
sawyer_interface/voice_command_listener/: CMakeLists.txt  nao_audio.cpp  package.xml  voice_command_listener.cpp
sawyer_interface/voice_command_listener/launch/: voice_command_listener.launch
sawyer_interface/voice_command_listener/speech/: speech_kb
sawyer_interface/voice_command_listener/speech/TAR9401/: 9401.dic  9401.lm  9401.log_pronounce  9401.sent  9401.vocab
woz/woz_actions/: CMakeLists.txt  package.xml
woz/woz_actions/include/node_controllers/: audio_recorder.hpp
woz/woz_actions/src/: audio_recorder.cpp  point.cpp
woz/woz_interface/: CMakeLists.txt  package.xml
woz/woz_interface/extra/: old.cpp  old.hpp
woz/woz_interface/launch/: sg_interface.launch  woz_interface.launch
woz/woz_interface/src/: main.cpp  woz_interface.cpp
woz/woz_msgs/: CMakeLists.txt  package.xml
(+8 files in other folders)
